fix: compilation issue with JDK 9